--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "moesif-alexa-skills",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "API Monitoring Middleware for Alexa Skills and Lambda",
-  "main": "./lib/index.js",
+  "main": "lib/index.js",
   "keywords": [
     "moesif",
     "aws",
@@ -32,10 +32,8 @@
     "url": "https://github.com/Moesif/moesif-alexa-skills-nodejs/issues"
   },
   "dependencies": {
-    "debug": "^3.1.0",
-    "lodash": "^4.16.4",
-    "moesifapi": "^1.3.2",
-    "string": "^3.1.1"
+    "lodash": "^4.17.15",
+    "moesifapi": "^2.0.5"
   },
   "scripts": {
     "test": "node_modules/.bin/mocha --reporter spec"
